welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:32: error: expected class or object definition
droite();
^DwarfCode:33: error: expected class or object definition
avance();
^DwarfCode:34: error: expected class or object definition
gauche();
^DwarfCode:35: error: expected class or object definition
avance(); 
^DwarfCode:37: error: Unmatched closing brace '}' ignored here
	}
        ^DwarfCode:38: error: eof expected but '}' found.
}
^